; ModuleID = '/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_esp_vfs_lseek.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/vfs/extr_vfs.c_esp_vfs_lseek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._reent = type { i32 }

@EBADF = common dso_local global i32 0, align 4
@lseek = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_vfs_lseek(%struct._reent* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct._reent*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct._reent* %0, %struct._reent** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32* @get_vfs_for_fd(i32 %14)
  store i32* %15, i32** %10, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @get_local_fd(i32* %16, i32 %17)
  store i32 %18, i32* %11, align 4
  %19 = load i32*, i32** %10, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %4
  %22 = load i32, i32* %11, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %21, %4
  %25 = load i32, i32* @EBADF, align 4
  store i32 %25, i32* %12, align 4
  store i32 -1, i32* %5, align 4
  br label %36

26:                                               ; preds = %21
  %27 = load i32, i32* %13, align 4
  %28 = load %struct._reent*, %struct._reent** %6, align 8
  %29 = load i32*, i32** %10, align 8
  %30 = load i32, i32* @lseek, align 4
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* %9, align 4
  %34 = call i32 @CHECK_AND_CALL(i32 %27, %struct._reent* %28, i32* %29, i32 %30, i32 %31, i32 %32, i32 %33)
  %35 = load i32, i32* %13, align 4
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %26, %24
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i32* @get_vfs_for_fd(i32) #1

declare dso_local i32 @get_local_fd(i32*, i32) #1

declare dso_local i32 @CHECK_AND_CALL(i32, %struct._reent*, i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
